--- a/index.html
+++ b/index.html
@@ -4,9 +4,143 @@
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
   </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
-
+  <body class="page_body">
+    <header class="page__header">
+      <div class="header__wrap">
+        <a href="#" class="header__logo_link">
+          <img src="http://placehold.it/86x35" alt="Мишка" class="header__logo_img" width="86" height="35">
+        </a>
+        <nav class="main_nav">
+          <a href="#" class="header__droplist_button">Меню</a>
+          <ul class="header__site_menu">
+            <li class="header__item">
+              <a href="" class="header__link">Каталог товаров</a>
+            </li>
+            <li class="header__item">
+              <a href="" class="header__link">Вязание на заказ</a>
+            </li>
+          </ul>
+          <ul class="header__user_menu">
+            <li class="header__item">
+              <a href="" class="header__link">Поиск по сайту</a>
+            </li>
+            <li class="header__item">
+              <a href="" class="header__link">Корзина: пока пуста</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="page__main">
+      <section class="home">
+        <div class="home__wrap">
+          <h1 class="main__title">Милые штуки ручной работы для дома</h1>
+          <div class="home__interior">
+            <span class="home__text">Предметы интерьера</span>
+            <img src="http://placehold.it/150x100" alt="Предметы интерьера" class="home__img"></div>
+          <div class="home__interior">
+            <span class="home__text">Детские игрушки</span>
+            <img src="http://placehold.it/150x100" alt="Детские игрушки" class="home__img"></div>
+        </div>
+      </section>
+      <section class="preview">
+        <div class="preview__wrap">
+          <h2 class="preview__title">Вязаные корзинки</h2>
+          <p class="preview__text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+          <div class="preview__spec">
+            <div class="preview__spec">
+              <span class="preview__spec_title">Цвет:</span>
+              <span class="preview__spec_description">«Тиффани»/серый</span>
+            </div>
+            <div class="preview__spec">
+              <span class="preview__spec_title">Диаметр:</span>
+              <span class="preview__spec_description">25 см</span>
+            </div>
+            <div class="preview__spec">
+              <span class="preview__spec_title">Высота:</span>
+              <span class="preview__spec_description">15 см</span>
+            </div>
+          </div>
+          <div class="preview__cart">
+            <img class="preview__img" src="http://placehold.it/150x100" alt="Вязаные корзинки">
+            <span class="preview__price">Цена: 990 руб.</span>
+            <a href="#" class="preview__order">ЗАКАЗАТЬ</a>
+          </div>
+        </div>
+      </section>
+      <section class="about_us">
+        <div class="about_us__wrap">
+          <h2 class="about_us__title">Коротко о нас:</h2>
+          <ul class="about_us__list">
+            <li class="about_us__item">Экологически чистые материалы</li>
+            <li class="about_us__item">Скандинавский стиль по российской цене</li>
+            <li class="about_us__item">Увеличивает лайкина фотографиях</li>
+            <li class="about_us__item">Связано вручную с любовью и умилением</li>
+            <li class="about_us__item">Поддержка отечественного производителя</li>
+            <li class="about_us__item">Поставляется в подарочной упаковке</li>
+          </ul>
+        </div>
+      </section>
+      <section class="reviews">
+        <div class="reviews__wrap">
+          <h2 class="reviews__title">Отзывы</h2>
+          <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+          <div class="reviews__author">
+            <span class="reviews__name">Анастасия Красильникова</span>
+            <span class="reviews__nick">@misssssiskras</span>
+          </div>
+          <div class="previews__nav">
+            <span class="previews__left"></span>
+            <span class="previews__right"></span>
+          </div>
+          <a href="#" class="previews__write">НАПИСАТЬ</a>
+        </div>
+      </section>
+      <section class="contacts">
+        <div class="contacts__wrap">
+          <h2 class="contacts__title">Контакты</h2>
+          <div class="contacts__email">
+            <span class="contacts__">e-mail:</span>
+            <span class="contacts__">info@mimimishkashop.ru</span>
+          </div>
+          <div class="contacts__adress">
+            <span class="contacts__">адрес:</span>
+            <span class="contacts__">
+              г. Санкт-Петербург,<br>
+              ул. Большая<br>
+              Конюшенная,<br>
+              д. 19/8, офис 101</span>
+          </div>
+          <img src="http://placehold.it/300x500" alt="" class="contacts__img">
+          <a href="" class="contacts__write_us"></a>
+        </div>
+      </section>
+    </main>
+    <footer class="page__footer">
+      <div class="footer__wrap">
+        <div class="footer__social">
+          <img src="http://placehold.it/22x21" alt="Instagram" class="social__img" width="22" height="21">
+          <img src="http://placehold.it/15x29" alt="Facebook" class="social__img" width="15" height="29">
+          <img src="http://placehold.it/24x20" alt="Twitter" class="social__img" width="24" height="20">
+        </div>
+        <span class="footer__text">Разработано</span>
+        <img src="http://placehold.it/50x50" alt="HTMLAcademy" class="footer__img">
+      </div>
+    </footer>
+    <section class="modal">
+      <div class="modal__wrap">
+        <h2 class="modal__title">Добавить в корзину</h2>
+        <span class="modal__text">Выберите размер:</span>
+        <form action="#" class="modal__form" method="post">
+          <input type="radio" class="modal__input" id="size_s" name="size">
+          <label for="size_s" class="modal__label">S</label>
+          <input type="radio" class="modal__input" id="size_m" name="size">
+          <label for="size_m" class="modal__label">M</label>
+          <input type="radio" class="modal__input" id="size_l" name="size">
+          <label for="size_l" class="modal__label">L</label>
+          <button type="submit" class="modal__button">Добавить</button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
