--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <li class="header__item_order header__item header__top">
               <a href="cart.html" class="header__link">Вязание на заказ</a>
             </li>
-            <li class="header__item">
-              <a href="#" class="header__link header__bottom header__new">Новые поступления</a>
+            <li class="header__item header__new">
+              <a href="#" class="header__link header__bottom">Новые поступления</a>
             </li>
-            <li class="header__item">
-              <a href="#" class="header__link header__bottom header__sale">Распродажа</a>
+            <li class="header__item header__sale">
+              <a href="#" class="header__link header__bottom">Распродажа</a>
             </li>
           </ul>
           <ul class="header__user_menu header__menu">
