--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <h2 class="contacts__title">Контакты</h2>
           <div class="contacts__email">
             <span class="contacts__info">e-mail:</span>
-            <a href="mailto: info@mimimishkashop.ru" class="contacts__mail contackts__date">info@mimimishkashop.ru</a href="emailto">
+            <a href="mailto: info@mimimishkashop.ru" class="contacts__mail contackts__date">info@mimimishkashop.ru</a>
           </div>
           <div class="contacts__adress">
             <span class="contacts__info">адрес:</span>
