--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
           <h2 class="contacts__title">Контакты</h2>
           <div class="contacts__email">
             <span class="contacts__info">e-mail:</span>
-            <a href="mailto: info@mimimishkashop.ru" class="contacts__mail contackts__date">info@mimimishkashop.ru</a>
+            <a href="mailto: info@mimimishkashop.ru" class="contacts__mail contacts__date">info@mimimishkashop.ru</a>
           </div>
           <div class="contacts__adress">
             <span class="contacts__info">адрес:</span>
-            <span class="contacts__info contackts__date">
+            <span class="contacts__info contacts__date">
               г. Санкт-Петербург,<br>
               ул. Большая
               Конюшенная,<br>
