Хедер на таблетке победил

--- a/cart.html
+++ b/cart.html
@@ -110,7 +110,7 @@
 
           <fieldset class="form__fieldset form__fieldset_textarea">
             <legend class="form__legend">Доп</legend>
-            <textarea name="textarea" id="other" cols="30" rows="10" class="form__textarea form__input_name" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+            <textarea name="textarea" id="other" cols="30" rows="7" class="form__textarea form__input_name" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </fieldset>
 
           <span class="form__requaried">*Поля обязательны для заполнения</span>
@@ -118,7 +118,7 @@
         </form>
       </section>
     </main>
-    <footer class="page__footer">
+    <footer class="page__footer page__footer_cart">
       <div class="footer__wrap">
         <div class="footer__social">
           <a href="#" class="footer__social_link">
