--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <picture class="preview__picture">
               <source media="(min-width: 1250px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
               <source media="(min-width: 678px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
-              <img class="preview__img" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Вязаные корзинки" width="260" height="315">
+              <img class="preview__img" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Вязаные корзинки">
             </picture>
           </div>
           <div class="preview__coast">
@@ -108,6 +108,7 @@
             <a href="#" class="preview__order btn">ЗАКАЗАТЬ</a>
           </div>
         </div>
+        <span class="preview__sepatator"></span>
       </section>
       <section class="about_us">
         <div class="about_us__wrap">
