--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <section class="reviews">
         <div class="reviews__wrap">
           <div class="reviews__img_wrap">
-            <img src="img/review@1x.jpg" alt="MISHKA" class="reviews__img" width="350" height="457">
+            <img src="img/review@1x.jpg" srcset="img/review@2x.jpg 2x" alt="MISHKA" class="reviews__img" width="350" height="457">
           </div>
           <h2 class="reviews__title">Отзывы</h2>
           <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
