--- a/index.html
+++ b/index.html
@@ -157,7 +157,11 @@
               д. 19/8, офис 101</span>
           </div>
           <div class="contacts__img_wrap">
-            <img class="contacts__img" src="img/map-mobile@1x.jpg" alt="г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101" width="350" height="457">
+            <picture class="contacts__picture">
+              <source media="(min-width: 1250px)" srcset="img/map-desktop@1x.jpg, img/map-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg, img/map-tablet@2x.jpg 2x">
+              <img class="contacts__img" src="img/map-mobile@1x.jpg" alt="г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101" width="350" height="457">
+            </picture>
           </div>
           <a href="#" class="contacts__write_us btn">Напишите нам</a>
         </div>
