--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
     <footer class="page__footer">
       <div class="footer__wrap">
         <div class="footer__logo_wrap">
-          <img src="img/logo-mobile.svg" alt="MISHKA" width="86" height="35">
+          <a href="index.html" class="footer__logo">
+            <img src="img/logo-footer.svg" class="footer__logo_img" alt="MISHKA" width="86" height="35">
+          </a>
         </div>
         <div class="footer__social">
           <a href="#" class="footer__social_link">
