--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
   <header class="page__header">
     <div class="header__wrap">
       <nav class="main_nav">
-        <a href="index.html" class="header__logo_link">
+        <a href="index.html" class="header__logo_link header__logo_link--catalog">
           <picture class="header__picture">
             <source media="(min-width: 1250px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 678px)" srcset="img/logo-tablet.svg">
@@ -23,17 +23,17 @@
           <svg class="menu_open" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="19.958px" height="14px" viewBox="0 0 19.958 14"><rect fill="#231F20" width="19.958" height="2"/><rect y="6" fill="#231F20" width="19.958" height="2"/><rect y="12" fill="#231F20" width="19.958" height="2"/></svg>
           <svg class="menu_close" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20.514px" height="20.512px" viewBox="0 0 20.514 20.512"><polygon fill="#231F20" points="20.513,1.414 19.099,0 10.256,8.842 1.414,0 0,1.414 8.842,10.256 0,19.098 1.414,20.512 10.256,11.67 19.099,20.512 20.513,19.098 11.671,10.256"/></svg>
         </label>
-        <ul class="header__site_menu header__menu">
+        <ul class="header__site_menu header__menu header__site_menu--catalog">
           <li class="header__item_catalog header__item">
             <a href="catalog.html" class="header__link">Каталог товаров</a>
           </li>
           <li class="header__item_order header__item">
-            <a class="header__link">Вязание на заказ</a>
+            <a href="#" class="header__link">Вязание на заказ</a>
           </li>
-          <li class="header__item header__new">
+          <li class="header__item header__new header__new--catalog">
             <a href="#" class="header__link header__bottom">Новые поступления</a>
           </li>
-          <li class="header__item header__sale">
+          <li class="header__item header__sale header__sale--catalog">
             <a href="#" class="header__link header__bottom">Распродажа</a>
           </li>
         </ul>
@@ -52,7 +52,7 @@
               </div>
             </a>
           </li>
-          <li class="header__item header__delivery"><span class="header__link_span">Бесплатная доставка по России</span></li>
+          <li class="header__item header__delivery header__delivery--mod"><span class="header__link_span">Бесплатная доставка по России</span></li>
         </ul>
       </nav>
     </div>
