--- a/catalog.html
+++ b/catalog.html
@@ -67,7 +67,7 @@
             <li class="catalog__item">
               <div class="catalog__img_wrap">
                 <picture class="catalog__picture">
-                  <source media="(min-width: 1250px)" srcset="img/photo-hare-desctop@1x.jpg, img/photo-hare-desctop@2x.jpg 2x">
+                  <source media="(min-width: 1250px)" srcset="img/photo-hare-desktop@1x.jpg, img/photo-hare-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg, img/photo-hare-tablet@2x.jpg 2x">
                   <img src="img/photo-hare-mobile@1x.jpg" alt="" class="catalog__img">
                 </picture>
@@ -85,7 +85,7 @@
             <li class="catalog__item">
               <div class="catalog__img_wrap">
                 <picture class="catalog__picture">
-                  <source media="(min-width: 1250px)" srcset="img/photo-bowl-desctop@1x.jpg, img/photo-bowl-desctop@2x.jpg 2x">
+                  <source media="(min-width: 1250px)" srcset="img/photo-bowl-desktop@1x.jpg, img/photo-bowl-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg, img/photo-bowl-tablet@2x.jpg 2x">
                   <img src="img/photo-bowl-mobile@1x.jpg" alt="" class="catalog__img">
                 </picture>
@@ -103,7 +103,7 @@
             <li class="catalog__item">
               <div class="catalog__img_wrap">
                 <picture class="catalog__picture">
-                  <source media="(min-width: 1250px)" srcset="img/photo-toys-desctop@1x.jpg, img/photo-toys-desctop@2x.jpg 2x">
+                  <source media="(min-width: 1250px)" srcset="img/photo-toys-desktop@1x.jpg, img/photo-toys-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg, img/photo-toys-tablet@2x.jpg 2x">
                   <img src="img/photo-toys-mobile@1x.jpg" alt="" class="catalog__img">
                 </picture>
