форма форма форма

--- a/cart.html
+++ b/cart.html
@@ -97,9 +97,9 @@
               <label class="form__label_date form__label" for="first_name">Имя:</label>
               <input type="text" class="form__input_name" id="first_name" placeholder="Введите ваше имя*">
               <label class="form__label_date form__label" for="second_name">Фамилия:</label>
-              <input type="text" class="form__input_name" id="second_name" placeholder="Укажите фамилию*">
+              <input type="text" class="form__input_name form__input_name2" id="second_name" placeholder="Укажите фамилию*">
               <label class="form__label_date form__label" for="thrid_name">Отчество:</label>
-              <input type="text" class="form__input_name" id="thrid_name" placeholder="Отчество, если желаете">
+              <input type="text" class="form__input_name form__input_name2" id="thrid_name" placeholder="Отчество, если желаете">
           </fieldset>
 
           <fieldset class="form__fieldset form__fieldset_tel">
