--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Мишка</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page_body">
     <header class="page__header">
@@ -65,13 +64,13 @@
             <div class="home__interior home__item">
               <a href="#" class="home__link">
                 <span class="home__text">Предметы интерьера</span>
-                <img src="img/icon-interior.svg" alt="Предметы интерьера" class="home__img" width="40.219" height="62.411">
+                <img src="img/icon-interior.svg" alt="Предметы интерьера" class="home__img" width="40" height="62">
               </a>
             </div>
             <div class="home__toy home__item">
               <a href="#" class="home__link">
                 <span class="home__text">Детские игрушки</span>
-                <img src="img/icon-toy.svg" alt="Детские игрушки" class="home__img" width="60" height="59.62">
+                <img src="img/icon-toy.svg" alt="Детские игрушки" class="home__img" width="60" height="59">
               </a>
             </div>
           </div>
@@ -146,7 +145,7 @@
           <h2 class="contacts__title">Контакты</h2>
           <div class="contacts__email">
             <span class="contacts__info">e-mail:</span>
-            <a href="mailto: info@mimimishkashop.ru" class="contacts__mail contacts__date">info@mimimishkashop.ru</a>
+            <a href="mailto:info@mimimishkashop.ru" class="contacts__mail contacts__date">info@mimimishkashop.ru</a>
           </div>
           <div class="contacts__adress">
             <span class="contacts__info">адрес:</span>
